--- a/.github/workflows/prep_and_release.yml
+++ b/.github/workflows/prep_and_release.yml
@@ -2,7 +2,8 @@ name: prep_and_release
 
 on:
   schedule:
-  - cron: "0 0 * * *"
+    - cron: "0 0 * * *"
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
