--- a/.github/workflows/prep_and_release.yml
+++ b/.github/workflows/prep_and_release.yml
@@ -1,8 +1,8 @@
 name: prep_and_release
 
 on:
-  schedule:
-    - cron: "0 0 * * *"
+  # schedule:
+  #   - cron: "0 0 * * *"
   workflow_dispatch:
 
 env:
