--- a/.github/workflows/prep_and_release.yml
+++ b/.github/workflows/prep_and_release.yml
@@ -19,13 +19,10 @@ jobs:
       run: echo "RELEASE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
 
     - name: Build the project
-      run: cargo build --verbose
-
-    - name: Run tests
-      run: cargo test --verbose
-
+      run: cargo build --release
+ 
     - name: Generate the output
-      run: cargo run
+      run: cargo run --release
 
     - name: Download latest release output.json
       run: curl -L -o latest_output.json https://github.com/krystianbajno/undocumented-winapi-json/releases/latest/download/output.json
